# complex-systems-visualizer

./: .gitignore  Cargo.toml  FEATURES.md  QUICKSTART.md  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: build-web.ps1  build-web.sh
sim-app/: Cargo.toml  build.rs
sim-app/src/: lib.rs  main.rs  viewer_2d.rs  viewer_3d.rs
sim-core/: Cargo.toml
sim-core/src/: aizawa.rs  boids_3d.rs  burning_ship.rs  cellular_automaton.rs  chen.rs  cyclic_ca.rs  dadras.rs  dla.rs  dna_helix.rs  double_pendulum.rs  falling_sand.rs  fluid_sph.rs  fractal_tree_3d.rs  galaxy_spiral.rs  game_of_life.rs  halvorsen.rs  julia.rs  langtons_ant.rs  lib.rs  lightning_bolt.rs  lissajous.rs  lorenz.rs  magnetic_field.rs  mandelbrot.rs  nbody_gravity.rs  particle_attractor_3d.rs  reaction_diffusion.rs  rossler.rs  sandpile.rs  slime_mold.rs  thomas.rs  torus_knot.rs  vortex_turbulence.rs  wave_interference.rs
sim-core/src/generative/: boids.rs  koch_snowflake.rs  mod.rs  perlin_flow.rs  phyllotaxis.rs  strange_attractors.rs
sim-web/: Cargo.toml  Trunk.toml  index.html
sim-web/src/: lib.rs
