[workspace]
members = ["sim-core", "sim-app", "sim-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Complex Systems Visualizer"]
license = "MIT"

[workspace.dependencies]
rayon = "1.10"
image = "0.25"
num-complex = "0.4"
noise = "0.9"
rand = "0.8"
palette = "0.7"

# Optimize WASM builds for size
[profile.release]
opt-level = 's'
lto = true
