[package]
name = "sim-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "An interactive Mandelbrot-style visualizer built with egui"

[lib]
name = "sim_app"
path = "src/lib.rs"

[[bin]]
name = "complex-systems-visualizer"
path = "src/main.rs"

[features]
default = ["native"]
native = ["eframe/default", "sim-core/parallel"]
web = ["eframe/glow"]

[dependencies]
sim-core = { path = "../sim-core", default-features = false }
eframe = { version = "0.29", default-features = false }
egui = "0.29"
egui_plot = "0.29"
num-complex.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Only include rayon for native builds
rayon.workspace = true

# --- macOS bundle metadata for cargo-bundle ---
[package.metadata.bundle]
name = "complex-systems-visualizer"
identifier = "com.yourname.mandelbrotviz"
version = "0.1.0"
short_description = "Explore Mandelbrot and fractal-style visualizations"
long_description = """
complex-systems-visualizer is a desktop application for exploring Mandelbrot-style
fractals and interactive visualizations built with egui.
"""
# workflow will generate this .icns file from AppIcon.png at build time
icon = ["assets/AppIcon.icns"]

[build-dependencies]
winres = "0.1"
